--- a/README.org
+++ b/README.org
@@ -1,5 +1,8 @@
 * Learning wix
-** TODO How can I automate crating Product.wxs.  Need to find right heat command, need xslt here?
+** TODO How can I automate creating Product.wxs
+
+Need to find right heat command, need xslt here?
+
 ** TODO uninstall fails
 ** How to get runnning
 
